--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,19 @@
     "private": true,
     "scripts": {
         "build-dev": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js",
-        "watch": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js --watch",
         "build-prod": "cross-env BUILD_ENV=prod webpack --config webpack.prod.js",
+        "watch": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js --watch",
+        "watch:hot": "cross-env BUILD_ENV=dev webpack-dev-server --hot --config webpack.dev.js",
         "lint": "eslint src",
         "lint:fix": "eslint src --fix",
         "test": "jest",
         "test:watch": "jest --watch"
     },
+    "BUILD_ENVS": {
+        "dev": "development",
+        "prod": "production"
+    },
+    "baseUrl": "/control",
     "dependencies": {
         "@nivo/line": "^0.49.1",
         "axios": "^0.19.2",
@@ -19,6 +25,7 @@
         "i18next": "^19.4.4",
         "i18next-browser-languagedetector": "^4.2.0",
         "ipaddr.js": "^1.9.1",
+        "js-yaml": "^3.14.0",
         "lodash": "^4.17.19",
         "nanoid": "^3.1.9",
         "prop-types": "^15.7.2",
@@ -73,6 +80,7 @@
         "path": "^0.12.7",
         "postcss-flexbugs-fixes": "4.2.1",
         "postcss-loader": "^3.0.0",
+        "react-hot-loader": "^4.12.21",
         "style-loader": "^1.2.1",
         "stylelint": "^13.5.0",
         "stylelint-webpack-plugin": "2.0.0",
