--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
         "build-dev": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js",
         "build-prod": "cross-env BUILD_ENV=prod webpack --config webpack.prod.js",
         "watch": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js --watch",
-        "watch:hot": "cross-env BUILD_ENV=dev webpack-dev-server --hot --config webpack.dev.js",
+        "watch:hot": "cross-env BUILD_ENV=dev webpack-dev-server --config webpack.dev.js",
         "lint": "eslint src",
         "lint:fix": "eslint src --fix",
         "test": "jest",
@@ -18,6 +18,7 @@
     },
     "baseUrl": "/control",
     "dependencies": {
+        "@hot-loader/react-dom": "^16.13.0",
         "@nivo/line": "^0.49.1",
         "axios": "^0.19.2",
         "classnames": "^2.2.6",
